[package]
name = "discord-voter"
version = "0.1.0"
authors = ["Builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "discord_voter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "standard_framework",
    "framework",
]
version = "0.10.9"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
